# projetCrypto

./: README.md
AE/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
AE/src/: index.html
AE/src/app/: api-call.service.ts  app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  certificate-received.ts  code-sent.ts  csr-sent.ts  revocation.ts
AE/src/app/confirmation/: confirmation.component.css  confirmation.component.html  confirmation.component.ts
AE/src/app/contact/: contact.component.css  contact.component.html
AE/src/app/signature-request/: signature-request.component.css  signature-request.component.html  signature-request.component.spec.ts  signature-request.component.ts
AE/src/app/supprimer/: supprimer.component.css  supprimer.component.html  supprimer.component.ts
AE/src/app/telechargement/: telechargement.component.css  telechargement.component.html  telechargement.component.spec.ts  telechargement.component.ts
backend/: .gitignore  ACI.crt  ACI.key  Cargo.toml  README.md  ca_chain.crt  ocsp.crt  ocsp.key
backend/certificate_stored/: 674f678e-9cc6-45fd-921e-21bf52fac33d.crt
backend/demoCA/: index.txt
backend/src/: api_error.rs  main.rs
backend/src/generation/: certificate.rs  mod.rs  model.rs  routes.rs  structure.rs  verification.rs
backend/src/revocation/: mod.rs  revocation.rs
