[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
env_logger = "0.9.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6.4"
openssl = "0.10.49"
base64 = "0.21.0"
lettre = "0.10.4"
uuid = { version = "1.3.1", features=["serde", "v4"]}